# fanotify

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  justfile
.cargo/: config
.github/workflows/: general.yml
src/: async_fanotify.rs  buffered_fanotify.rs  common.rs  descriptor.rs  event.rs  fanotify.h  fanotify.rs  fd.rs  init.rs  lib.rs  libc.rs  mark.rs  read.rs  responses.rs  util.rs
src/event/: buffer.rs  display.rs  error.rs  event.rs  events.rs  id.rs  iterator.rs  iterator_ext.rs  mod.rs  responses.rs
src/event/file/: fd.rs  fid.rs  mod.rs  permission.rs
src/fanotify/: async_fanotify.rs  buffered_fanotify.rs  mod.rs
src/flags/: fanotify.h  init.rs  libc.rs  mark.rs  mod.rs
src/init/: error.rs  event_flags.rs  flags.rs  init.rs  mod.rs  notification_class.rs  raw.rs  rw.rs
src/libc/: call.rs  mod.rs
src/mark/: action.rs  dir_fd.rs  error.rs  flags.rs  mark.rs  markable.rs  mask.rs  mod.rs  path.rs  raw.rs  what.rs
src/test/: driver.rs  mod.rs  supported.rs
tests/: main.rs
tests/util/: driver.rs  mod.rs  supported.rs
