[package]
name = "fanotify"
version = "0.2.0"
authors = [
    "Khyber Sen <kkysen@gmail.com>",
    "Rickson Yang <rixin.yang.2001@gmail.com>",
]
edition = "2018"
description = "An idiomatic Rust wrapper for fanotify"
license = "MIT"
repository = "https://github.com/codeprentice-org/fanotify"
homepage = "https://github.com/codeprentice-org/fanotify/blob/main/README.md"
readme = "README.md"
categories = ["filesystem", "os::linux-apis"]
keywords = ["fanotify", "filesystem", "watch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"
nix = "0.19.1"
bitflags = "1.2.1"
thiserror = "1.0.23"
static_assertions = "1.1.0"
apply = "0.3.0"
to_trait = "0.1.1"
async-io = "1.3.1"

[dev-dependencies]
semver = "0.11.0"
tempfile = "3.2.0"
